Added auth routes and exercise schema

--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://jack:jack123@cluster0.digj2.mongodb.net/posts?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://jack:jack123@cluster0.x0eun.mongodb.net/ExerciseTracker?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID = 705216099883-mi3mvs73pjvte5pshrqotsu0c7ilh0va.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = JtRcYfAtwRYqRf6fnIbC-fjC
